# jquadratbot

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.specify/memory/: constitution.md
specs/001-gemini-image-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gemini-image-bot/checklists/: requirements.md
specs/001-gemini-image-bot/contracts/: commands.md
specs/002-ical-reminders/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ical-reminders/checklists/: requirements.md
specs/002-ical-reminders/contracts/: reminder-message-format.md
src/: bot.py  config.py
src/gemini/: client.py  context.py  errors.py  generate.py  interpret.py  modify.py
src/handlers/: common.py  generate.py  interpret.py  modify.py  reset.py
src/reminders/: __init__.py  config.py  formatter.py  parser.py  scheduler.py
tests/: conftest.py
tests/integration/: test_error_handling.py  test_generate_handler.py  test_interpret_handler.py  test_modify_handler.py
tests/reminders/: test_formatter.py  test_parser.py  test_scheduler.py
tests/reminders/fixtures/: sample.ics
tests/unit/: test_config.py  test_context.py  test_gemini_generate.py  test_gemini_interpret.py  test_gemini_modify.py
