[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "telegram-img"
version = "0.1.0"
description = "Telegram bot for image interpretation, generation, and modification via Google Gemini"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot>=21.0",
    "google-genai>=1.14.0",
    "python-dotenv>=1.0.0",
    # iCalendar parsing (002-ical-reminders)
    "icalendar>=6.0",
    # Recurrence rule expansion for RRULE/RDATE/EXDATE (002-ical-reminders)
    "python-dateutil>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "telegram.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "icalendar.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true
